--- a/index.html
+++ b/index.html
@@ -60,14 +60,14 @@
         <p>Time: <span id="time">Loading...</span></p>
         <p>Date: <span id="date">Loading...</span></p>
         <footer>
-            &copy; 2024 <a href="https://your-website.com">YourName</a>. All rights reserved.
+            &copy; 2024 <a href="https://www.facebook.com/Churchill.Dev4100">Churchill Abing</a>. All rights reserved.
         </footer>
     </div>
 
     <script>
         async function fetchIPInfo() {
             try {
-                const response = await fetch('https://ipinfo.io/json?token=your_api_token');
+                const response = await fetch('https://ipinfo.io/json?token=60117f9430a2b5');
                 const data = await response.json();
 
                 document.getElementById('ip').textContent = data.ip;
