--- a/index.html
+++ b/index.html
@@ -7,40 +7,38 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
             display: flex;
-            flex-direction: column;
-            align-items: center;
             justify-content: center;
+            align-items: center;
             min-height: 100vh;
+            background-color: #f0f0f0;
+            margin: 0;
         }
         .container {
-            background-color: #fff;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            width: 90%;
-            max-width: 600px;
+            background: white;
             padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
             text-align: center;
         }
         header {
             background-color: #4CAF50;
-            border-radius: 10px 10px 0 0;
             color: white;
-            padding: 15px 0;
-            font-size: 1.5rem;
+            padding: 10px 0;
+            border-radius: 8px 8px 0 0;
+            margin: -20px -20px 20px;
+            font-size: 1.5em;
         }
-        select, button {
+        select, button, input {
             padding: 10px;
             margin: 10px 0;
             font-size: 1rem;
+            width: calc(100% - 24px);
         }
         img {
             margin-top: 20px;
             max-width: 100%;
-            border-radius: 10px;
+            border-radius: 8px;
         }
         .loader {
             display: none;
@@ -63,6 +61,7 @@
         <header>
             Welcome to Image Generator
         </header>
+        <input type="text" id="prompt" placeholder="Enter your prompt here">
         <select id="style-select">
             <option value="anime">Anime</option>
             <option value="fantasy">Fantasy</option>
@@ -85,25 +84,32 @@
 
     <script>
         async function generateImage() {
+            const prompt = document.getElementById('prompt').value;
             const style = document.getElementById('style-select').value;
             const loader = document.getElementById('loader');
             const image = document.getElementById('generated-image');
+
+            if (!prompt) {
+                alert("Please enter a prompt.");
+                return;
+            }
+
             loader.style.display = 'block';
             image.style.display = 'none';
             
             try {
-                const response = await fetch('https://deku-rest-api-gadz.onrender.com/sdxl/list', {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json'
-                    },
-                    body: JSON.stringify({ style })
-                });
+                const response = await fetch(`https://deku-rest-api-gadz.onrender.com/sdxl/list?prompt=${encodeURIComponent(prompt)}&styles=${encodeURIComponent(style)}`);
                 const data = await response.json();
-                image.src = data.image_url;
-                image.style.display = 'block';
+                
+                if (data.image_url) {
+                    image.src = data.image_url;
+                    image.style.display = 'block';
+                } else {
+                    alert("Image generation failed.");
+                }
             } catch (error) {
                 console.error('Error generating image:', error);
+                alert('An error occurred while generating the image.');
             } finally {
                 loader.style.display = 'none';
             }
