--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             margin-top: 20px;
             max-width: 100%;
             border-radius: 8px;
+            display: none;
         }
         .loader {
             display: none;
@@ -79,7 +80,7 @@
         </select>
         <button onclick="generateImage()">Generate Image</button>
         <div class="loader" id="loader"></div>
-        <img id="generated-image" src="" alt="Generated Image">
+        <img id="generated-image" alt="Generated Image">
     </div>
 
     <script>
