--- a/public/index.html
+++ b/public/index.html
@@ -59,20 +59,25 @@
         <p id="generatedEmail"></p>
     </div>
     <div>
-        <input type="text" id="inboxCodeInput" placeholder="Enter Inbox Code">
         <button id="checkInboxBtn">Check Inbox</button>
         <div id="inboxMessages"></div>
     </div>
     <script>
+        let generatedEmailId;
+
         document.getElementById('generateEmailBtn').addEventListener('click', async () => {
             const response = await fetch('/generate-email');
             const data = await response.json();
             document.getElementById('generatedEmail').textContent = data.email;
+            generatedEmailId = data.email.split('@')[0]; // Extract the email ID
         });
 
         document.getElementById('checkInboxBtn').addEventListener('click', async () => {
-            const inboxCode = document.getElementById('inboxCodeInput').value;
-            const response = await fetch(`/check-email?id=${inboxCode}`);
+            if (!generatedEmailId) {
+                document.getElementById('inboxMessages').textContent = 'Please generate an email first.';
+                return;
+            }
+            const response = await fetch(`/check-email?id=${generatedEmailId}`);
             const data = await response.json();
             const inboxMessagesDiv = document.getElementById('inboxMessages');
             inboxMessagesDiv.innerHTML = ''; // Clear previous messages
