--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,67 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TempMail Generator</title>
-    <link rel="stylesheet" href="/style.css">
+    <style>
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background-color: #282c34;
+            color: white;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            margin: 0;
+            text-align: center;
+        }
+        h1 {
+            color: #61dafb;
+            margin-bottom: 20px;
+        }
+        button, input {
+            padding: 10px 20px;
+            margin: 10px 5px;
+            border: none;
+            border-radius: 5px;
+            font-size: 16px;
+            transition: background-color 0.3s, transform 0.3s;
+        }
+        button {
+            background-color: #61dafb;
+            color: black;
+            cursor: pointer;
+        }
+        button:hover {
+            background-color: #21a1f1;
+            transform: scale(1.05);
+        }
+        input {
+            background-color: #333;
+            color: white;
+        }
+        #generatedEmail, #inboxMessages {
+            margin-top: 10px;
+            padding: 10px;
+            background-color: #333;
+            border-radius: 5px;
+            width: 80%;
+            max-width: 500px;
+            word-wrap: break-word;
+        }
+        #generatedEmail {
+            border: 2px solid #61dafb;
+        }
+        .message {
+            background-color: #444;
+            border-radius: 5px;
+            padding: 10px;
+            margin: 10px 0;
+            text-align: left;
+        }
+        .message p {
+            margin: 5px 0;
+        }
+    </style>
 </head>
 <body>
     <h1>TempMail Generator</h1>
@@ -22,7 +82,7 @@
         document.getElementById('generateEmailBtn').addEventListener('click', async () => {
             const response = await fetch('/api/generate-email');
             const data = await response.json();
-            document.getElementById('generatedEmail').textContent = data.email;
+            document.getElementById('generatedEmail').textContent = `Generated Email: ${data.email}`;
             generatedEmailId = data.email.split('@')[0];
         });
 
@@ -38,7 +98,12 @@
             if (data.messages && data.messages.length > 0) {
                 data.messages.forEach(message => {
                     const messageElement = document.createElement('div');
-                    messageElement.textContent = `From: ${message.from} - Subject: ${message.subject} - Body: ${message.body}`;
+                    messageElement.classList.add('message');
+                    messageElement.innerHTML = `
+                        <p><strong>From:</strong> ${message.from}</p>
+                        <p><strong>Subject:</strong> ${message.subject}</p>
+                        <p><strong>Body:</strong> ${message.body}</p>
+                    `;
                     inboxMessagesDiv.appendChild(messageElement);
                 });
             } else {
